[tool.poetry]
name = "bot-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.31.0"
Flask = "^2.0.2"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.12.17"
ffmpeg = "^1.4"
"discord.py" = "^1.7.3"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
